@@ -792,3 +792,8 @@
 	  support for while-do-done and until-do-done loops.  These only work
 	  when executing a script file because they depend on the ability to seek
 	  in the file to implement the looping behaviors (2014-1-17).
+	* apps/nshlib/nsh_parse.c:  Loosen up if-then-else-fi syntax to allow
+	  a command to be on the same line as the then and else tokens like:
+	  "if true; then echo true; else echo false; fi".  Much more like bash!
+	  (2014-1-17).
+
